syntax = "proto3";

package calculator;
option go_package="./calculator/calculatorpb";

message SumRequest {
    int32 a = 1;
    int32 b = 2;
}

message SumResponse {
    int64 result = 1;
}

message DecomposePrimeNumberRequest {
    int32 number = 1;
}

message DecomposePrimeNumberResponse {
    int32 result = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double result = 1;
}

message SquareRootRequest {
    double number = 1;
}

message SquareRootResponse {
    double result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse) {};

    rpc DecomposePrimeNumber(DecomposePrimeNumberRequest) returns (stream DecomposePrimeNumberResponse) {};

    rpc Average(stream AverageRequest) returns (AverageResponse) {};

    // error handling
    // this RPC will throw an exception if the sent number is negative
    // the error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
